--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/markedwardsims/deathmatch-warriors-services#readme",
   "dependencies": {
-    "restify": "^4.2.0"
+    "bluebird": "^3.4.6",
+    "mysql": "^2.12.0",
+    "nconf": "^0.8.4",
+    "node-uuid": "^1.4.7",
+    "require-directory": "^2.1.1",
+    "restify": "^4.2.0",
+    "sequelize": "^3.24.7",
+    "winston": "^2.2.0"
   }
 }
