--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel-node app.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,10 @@
   },
   "homepage": "https://github.com/markedwardsims/deathmatch-warriors-services#readme",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-register": "^6.18.0",
     "bluebird": "^3.4.6",
     "mysql": "^2.12.0",
     "nconf": "^0.8.4",
@@ -25,5 +30,8 @@
     "restify": "^4.2.0",
     "sequelize": "^3.24.7",
     "winston": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0"
   }
 }
